# 2025_data_engineer_zoomcamp

./: .gitignore  README.md  docker-compose.yml  main.tf  pyproject.toml  variables.tf
database/: Dockerfile
flows_kestra/: zoomcamp.02_postgres_taxi.yml  zoomcamp.02_postgres_taxi_scheduled.yml  zoomcamp.07_gcp_taxi_scheduled.yml
ingestion/: main.py
load_to_gcs/: to_gcs.py
workshow_dlt/: DEZoomcamp_dlt_Homework.ipynb
